--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,13 +26,13 @@
                     <a href="/" id="logo" title="Moviemates" class="logo-image" th:data-bg-image="@{/images/movieLogo.jpg}">Moviemates</a>
                 </div>
                 <div class="col-md-4 col-md-offset-2 col-sm-6 col-xs-8 phl0">
-                    <div class="header_author">
+                    <div class="header_author" type="hidden" th:if="${#session.getAttribute('loginUser') != null}" name="loginUser" value="${#session.getAttribute('loginUser')}">
                         <a th:href="@{/api/user/login}">Login</a>
                     </div>
-                    <div class="header_ticket">
+                    <div class="header_ticket" type="hidden" th:if="${#session.getAttribute('loginUser') == null}" name="loginUser" value="${#session.getAttribute('loginUser')}">
                         <a th:href="@{/api/user/mypage/1}">Mypage</a>
                     </div>
-                    <div class="header_ticket">
+                    <div class="header_ticket" type="hidden" th:if="${#session.getAttribute('loginUser') == null}" name="loginUser" value="${#session.getAttribute('loginUser')}">
                         <a href="#order" class="order_btn">Order</a>
                         <span>3</span>
                     </div>
